--- a/components/UnderConstruction/styles.css
+++ b/components/UnderConstruction/styles.css
@@ -5,10 +5,16 @@
   padding: 20px;
   border-radius: 10px;
   border: 2px solid gray;
-  min-height: 50vh;
+  min-height: 88vh;
   background-color: #8080804a;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #535353;
+}
+
+@media only screen and (max-width: 600px) {
+  .container {
+    min-height: 50vh;
+  }
 }
