--- a/components/CalculatorTemplate/styles.css
+++ b/components/CalculatorTemplate/styles.css
@@ -1,8 +1,8 @@
 .calculator-logo-container {
   font-size: 1.2rem;
-  line-height: 1.2rem;
+  line-height: 1.4rem;
   border: 1px solid #626262;
-  padding: 20px;
+  padding: 10px;
   border-radius: 1em;
   background-color: white;
   width: 15vw;
@@ -21,6 +21,8 @@
 
 .calculator-logo-container:hover {
   transform: scale(1.05);
+  background: linear-gradient(to left, #1a1a1a, #333333, #4d4d4d, #666666);
+  color: white;
 }
 
 @media only screen and (max-width: 480px) {
@@ -28,6 +30,7 @@
     width: 23vw;
     height: 23vw;
     font-size: 0.7rem;
+    line-height: 0.9rem;
   }
 }
 
@@ -45,4 +48,32 @@
     height: 15vw;
     font-size: 1.2rem;
   }
+}
+
+.calculator-template-top-div {
+  width: 100%;
+  height: 200px;
+  background: linear-gradient(to right, #5e5eed, #1cd8d9, #00a900);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  font-size: 24px;
+  text-align: center;
+}
+
+.calculator-template-middle-div {
+  flex: 1;
+  overflow: auto;
+}
+
+.calculator-template-bottom-div {
+  width: 100%;
+  padding-top: 15px;
+  padding-bottom: 15px;
+  margin-bottom: 50px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #f0f0f0;
 }
