--- a/app/(calculators)/name-numerology-calculator/styles.module.css
+++ b/app/(calculators)/name-numerology-calculator/styles.module.css
@@ -2,9 +2,9 @@
   box-sizing: border-box;
   max-width: 100%;
   padding: 20px;
-  /* background-color: black; */
   display: flex;
   flex-direction: row;
+  margin: 0 10vw;
 }
 
 .formContainer {
@@ -16,8 +16,6 @@
   width: 25vw;
   height: 50px;
   padding: 0.5rem;
-  /* background-color: rgb(107, 107, 107);
-    color: white; */
   letter-spacing: 1px;
   border: 1px solid gray;
   border-radius: 25px;
@@ -26,16 +24,16 @@
 
 .nameLabel {
   color: black;
-  font-size: 20px;
+  font-size: 1.3vw;
   margin-top: 20px;
 }
 
 .calculateBtn {
   color: white;
-  font-size: 1.2rem;
+  font-size: 1.3vw;
   font-weight: 600;
   height: 50px;
-  width: 150px;
+  width: auto;
   border-radius: 20px;
   background-color: rgb(189, 58, 80);
   text-align: center;
@@ -51,7 +49,7 @@
 
 .systemLabel {
   color: black;
-  font-size: 20px;
+  font-size: 1.3vw;
   margin-top: 20px;
 }
 
@@ -69,7 +67,6 @@
   flex-direction: row;
   justify-content: space-around;
   align-items: center;
-
   flex: 1;
   padding: 10px;
 }
@@ -80,6 +77,100 @@
 }
 
 .resultContainer {
-  background-color: lightpink;
+  justify-content: space-evenly;
+  align-items: center;
   flex: 1;
+  display: flex;
+  column-gap: 20px;
+  padding: 10px;
+  /* background-color: lightgrey; */
+  animation: fadeIn 0.5s ease-in-out;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.resultCard {
+  background-color: gold;
+  width: 15vw;
+  height: 15vw;
+  max-width: 220px;
+  max-height: 220px;
+  min-width: 150px;
+  min-height: 150px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+}
+
+.resultCardTitle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px 0px;
+  font-size: 1.3vw;
+}
+
+.resultCardResult {
+  color: #000000ab;
+  flex: 1;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 3.5rem;
+  font-weight: bold;
+}
+
+@media only screen and (max-width: 800px) {
+  .container {
+    flex-direction: column;
+    margin: 0 5vw;
+    padding: 20px 0px;
+  }
+
+  .textInput {
+    width: 100%;
+  }
+
+  .nameLabel {
+    font-size: inherit;
+  }
+
+  .calculateBtn {
+    font-size: inherit;
+  }
+
+  .systemLabel {
+    font-size: inherit;
+  }
+
+  .resultCard {
+    background-color: gold;
+    width: 15vw;
+    height: 15vw;
+    max-width: 220px;
+    max-height: 220px;
+    min-width: 140px;
+    min-height: 140px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+  }
+
+  .resultCardTitle {
+    font-size: inherit;
+  }
+
+  .resultCardResult {
+    font-size: 3rem;
+  }
 }
