--- a/components/NameCalculatorTemplate/styles.module.css
+++ b/components/NameCalculatorTemplate/styles.module.css
@@ -1,14 +1,3 @@
-/* Define CSS variables for colors */
-:root {
-  --primary-color: rgb(189, 58, 80);
-  --primary-color-hover: rgb(88, 25, 25);
-  --secondary-color: green;
-  --text-color: black;
-  --background-color: #fbfaef;
-  --gold-color: gold;
-  --gray-color: gray;
-}
-
 .container {
   box-sizing: border-box;
   max-width: 100%;
@@ -29,13 +18,13 @@
   height: 50px;
   padding: 0.5rem;
   letter-spacing: 1px;
-  border: 1px solid var(--gray-color);
+  border: 1px solid gray;
   border-radius: 25px;
   margin-top: 10px;
 }
 
 .label {
-  color: var(--text-color);
+  color: black;
   font-size: max(1.1vw, 1em);
   margin-top: 20px;
 }
@@ -47,7 +36,7 @@
   padding: 0.6em 1em;
   letter-spacing: 1px;
   border-radius: 20px;
-  background-color: var(--primary-color);
+  background-color: rgb(189, 58, 80);
   text-align: center;
   display: flex;
   align-items: center;
@@ -57,13 +46,13 @@
 }
 
 .calculateBtn:hover {
-  background-color: var(--primary-color-hover);
+  background-color: rgb(88, 25, 25);
 }
 
 .systemOptionContainer {
   display: flex;
   flex-direction: row;
-  border: 1px solid var(--secondary-color);
+  border: 1px solid green;
   border-radius: 10px;
   overflow: hidden;
   margin-top: 10px;
@@ -80,7 +69,7 @@
 }
 
 .systemOptionSelected {
-  background-color: var(--secondary-color);
+  background-color: green;
   color: white;
 }
 
