--- a/components/CalculatorWrapper/styles.module.css
+++ b/components/CalculatorWrapper/styles.module.css
@@ -53,7 +53,7 @@
 .calculatorTemplateTopDiv {
   width: 100%;
   height: 200px;
-  background: linear-gradient(to right, #5e5eed, #1cd8d9, #00a900);
+  background: linear-gradient(to right, #a10632, #ff6faa, #fecfcb);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -65,6 +65,8 @@
 .calculatorTemplateMiddleDiv {
   flex: 1;
   overflow: auto;
+  background-color: white;
+  color: rgb(87, 87, 87);
 }
 
 .calculatorTemplateBottomDiv {
