--- a/components/Header/styles.module.css
+++ b/components/Header/styles.module.css
@@ -1,11 +1,16 @@
-.header {
+.container {
   display: flex;
   align-items: center;
   justify-content: space-between;
   padding: 16px 5vw;
-  background-color: #1f2937; /* Dark gray */
+  background-color: var(--header-background);
   color: white;
-  position: relative;
+  position: fixed; /* Fixed to the top */
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  z-index: 1000; /* Ensures it stays above other content */
 }
 
 .titleLeft {
@@ -52,7 +57,7 @@
   position: absolute;
   top: 100%;
   left: 0;
-  background-color: #374151; /* Gray */
+  background-color: var(--header-background);
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
   min-width: 150px;
@@ -69,7 +74,7 @@
 }
 
 .dropdownItem:hover {
-  background-color: #4b5563; /* Darker gray */
+  background-color: #858585; /* Darker gray */
 }
 
 .menuButton {
@@ -87,7 +92,7 @@
   right: 0;
   width: 250px;
   height: 100vh;
-  background-color: #1f2937;
+  background-color: var(--header-background);
   padding: 20px;
   box-shadow: -2px 0 5px rgba(0, 0, 0, 0.5);
   display: flex;
