--- a/app/globals.css
+++ b/app/globals.css
@@ -15,13 +15,17 @@ body {
   padding-top: 64px; /* This is to buffer space for the Header dock feature */
 }
 
+.boxShadow {
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+}
+
 .calculateBtn {
   color: white;
   font-size: max(1.2vw, 1.6em);
   font-weight: 600;
   padding: 0.6em 1em;
   letter-spacing: 1px;
-  border-radius: 20px;
+  border-radius: 0.5rem;
   background-color: rgb(189, 58, 80);
   text-align: center;
   display: flex;
@@ -31,15 +35,29 @@ body {
   transition: background-color 0.3s ease;
 }
 
+.label {
+  color: black;
+  font-size: max(1.1vw, 1em);
+  margin-top: 20px;
+}
+
 @media only screen and (max-width: 480px) {
   .calculateBtn {
     font-size: max(0.9vw, 1.1em);
+  }
+
+  .label {
+    font-size: max(0.6vw, 0.8em);
   }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 820px) {
   .calculateBtn {
     font-size: max(1.3vw, 1.3em);
+  }
+
+  .label {
+    font-size: max(0.9vw, 1em);
   }
 }
 
