--- a/components/SystemField/styles.module.css
+++ b/components/SystemField/styles.module.css
@@ -1,16 +1,12 @@
-.label {
-  color: black;
-  font-size: max(1.1vw, 1em);
-  margin-top: 20px;
-}
-
 .systemOptionContainer {
   display: flex;
   flex-direction: row;
   border: 1px solid green;
-  border-radius: 10px;
+  border-radius: .5rem;
   overflow: hidden;
   margin-top: 10px;
+  background-color: white;
+  color: green;
 }
 
 .systemOption {
@@ -29,20 +25,12 @@
 }
 
 @media only screen and (max-width: 480px) {
-  .label {
-    font-size: max(0.6vw, 0.8em);
-  }
-
   .systemOption {
     font-size: max(0.8vw, 1em);
   }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 820px) {
-  .label {
-    font-size: max(0.9vw, 1em);
-  }
-
   .systemOption {
     font-size: max(1.1vw, 1.1em);
   }
