feat: css color

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,7 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-  --header-background: #2a4b5f;
+  --header-background: #d55882;
 }
 
 body {
