--- a/components/layouts/CalculatorWrapper/styles.module.css
+++ b/components/layouts/CalculatorWrapper/styles.module.css
@@ -50,7 +50,7 @@
 .calculatorTemplateTopDiv {
   width: 100%;
   height: 200px;
-  background: linear-gradient(to right, #a10632, #ff6faa, #fecfcb);
+  background: radial-gradient(#01b7cc, #005e80);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -74,5 +74,5 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #d55882;
+  background-color: #ff6faa;
 }
