--- a/components/layouts/CalculatorWrapper/styles.module.css
+++ b/components/layouts/CalculatorWrapper/styles.module.css
@@ -1,3 +1,10 @@
+.container {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  padding-top: 64px; /* This is to buffer space for the Header dock feature */
+}
+
 .calculatorLogoContainer {
   font-size: 1.2rem;
   line-height: 1.4rem;
