--- a/app/login/styles.module.css
+++ b/app/login/styles.module.css
@@ -35,6 +35,12 @@
   font-size: 1rem;
 }
 
+.error {
+  font-size: 0.8rem;
+  color: #494747;
+  font-weight: bold;
+}
+
 .input {
   width: 100%;
   height: 40px;
