--- a/app/(calculators)/pinnacle-number-calculator/styles.module.css
+++ b/app/(calculators)/pinnacle-number-calculator/styles.module.css
@@ -1,63 +1,83 @@
-/* Grid.module.css */
 .gridContainer {
-    width: 100%;
-    border: 1px solid #e2e8f0;
-    border-radius: 8px;
-    overflow: hidden;
+  width: 100%;
+  border: 1px solid gray;
+  border-radius: 8px;
+  overflow: hidden;
+  margin: 0 10px;
+}
+
+.headerRow {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  font-weight: 600;
+  background-color: gold;
+}
+
+.headerCell {
+  padding: 16px;
+  border-bottom: 1px solid #e2e8f0;
+  text-align: center;
+  font-size: max(1vw, 1em);
+}
+
+.row {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  cursor: pointer;
+  transition: background-color 0.2s ease;
+  border-top: 1px solid gray;
+}
+
+.activeRow {
+  font-weight: bold;
+}
+
+.cell {
+  padding: 16px;
+  border-bottom: 1px solid #e2e8f0;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 14px;
+}
+
+.expandedContent {
+  font-size: 13px;
+  word-spacing: 1px;
+  line-height: 20px;
+  grid-column: 1 / span 3;
+  padding: 16px;
+  background-color: whitesmoke;
+  border-bottom: 1px solid #e2e8f0;
+  animation: expandAnimation 0.3s ease;
+  background-color: #f4eecc;
+}
+
+@keyframes expandAnimation {
+  from {
+    max-height: 0;
+    opacity: 0;
   }
-  
-  .headerRow {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    background-color: #f8fafc;
-    font-weight: 600;
+  to {
+    max-height: 500px;
+    opacity: 1;
   }
-  
-  .headerCell {
-    padding: 16px;
-    border-bottom: 1px solid #e2e8f0;
-    text-align: center;
+}
+
+@media only screen and (max-width: 480px) {
+  .gridContainer {
+    margin: 0;
   }
-  
-  .row {
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    cursor: pointer;
-    transition: background-color 0.2s ease;
-  }
-  
-  .row:hover {
-    background-color: #f1f5f9;
-  }
-  
-  .activeRow {
-    background-color: #e0f2fe;
-  }
-  
-  .cell {
-    padding: 16px;
-    border-bottom: 1px solid #e2e8f0;
-    text-align: center;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  
-  .expandedContent {
-    grid-column: 1 / span 3;
-    padding: 16px;
-    background-color: #f8fafc;
-    border-bottom: 1px solid #e2e8f0;
-    animation: expandAnimation 0.3s ease;
-  }
-  
-  @keyframes expandAnimation {
-    from {
-      max-height: 0;
-      opacity: 0;
-    }
-    to {
-      max-height: 500px;
-      opacity: 1;
-    }
-  }
+}
+
+.expandedContent ol {
+  list-style-type:square;
+  padding-left: 20px;
+  margin: 10px 0;
+}
+
+.expandedContent li {
+  display: list-item;
+  margin-bottom: 5px;
+}
