--- a/components/templates/DateCalcTemplate/styles.module.css
+++ b/components/templates/DateCalcTemplate/styles.module.css
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: row;
   margin: 0 10vw;
+  /* background-color: skyblue; */
 }
 
 .formContainer {
@@ -49,7 +50,6 @@
 
   .formContainer {
     align-items: stretch;
-    justify-content: center;
   }
 }
 
