--- a/app/(calculators)/loshu-grid/styles.module.css
+++ b/app/(calculators)/loshu-grid/styles.module.css
@@ -24,7 +24,7 @@
   flex-wrap: wrap;
   padding: 10px 0;
   animation: fadeIn 0.5s ease-in-out;
-  background-color: yellow;
+  /* background-color: yellow; */
 }
 
 @keyframes fadeIn {
