--- a/app/(calculators)/loshu-grid/styles.module.css
+++ b/app/(calculators)/loshu-grid/styles.module.css
@@ -19,6 +19,7 @@
   align-items: center;
   flex: 1;
   display: flex;
+  flex-direction: column;
   column-gap: 20px;
   row-gap: 20px;
   flex-wrap: wrap;
@@ -43,9 +44,10 @@
   }
 }
 
-@media only screen and (min-width: 481px) and (max-width: 820px) {
+@media only screen and (min-width: 481px) and (max-width: 950px) {
   .container {
-    margin: 0 5vw;
+    flex-direction: column;
+    margin: 0 2vw;
   }
 
   .formContainer {
@@ -53,8 +55,12 @@
   }
 }
 
-@media only screen and (min-width: 821px) {
+@media only screen and (min-width: 951px) {
   .formContainer {
     min-width: 400px;
+  }
+
+  .resultContainer {
+    padding: 10px;
   }
 }
