--- a/components/LoshuGrid/styles.module.css
+++ b/components/LoshuGrid/styles.module.css
@@ -44,3 +44,52 @@
   justify-content: center;
   margin-top: 0.5em;
 }
+
+.interpretationContainer {
+  /* border: 1px solid red; */
+  width: 100%;
+}
+
+.interpretationRow {
+  border-bottom: 1px solid lightgray;
+  margin-bottom: 10px;
+  padding: 5px;
+}
+
+.interpretationRow:nth-child(1) {
+  margin-top: 10px;
+}
+
+.interpretationRowTitle {
+  overflow: hidden;
+  background-color: lightcoral;
+  padding: 5px;
+  border-radius: 5px;
+  display: inline-flex;
+}
+
+.interpretationRowNumber {
+  border-left: 1px solid white;
+  width: 40px;
+  text-align: center;
+  font-size: 20px;
+  color: whitesmoke;
+  line-height: 30px;
+  font-weight: bold;
+}
+
+.interpretationRowNumber:nth-child(1) {
+  border-left: none;
+}
+
+.interpretationRowContent {
+  padding: 5px 0px;
+  font-size: 15px;
+  line-height: 22px;
+}
+
+.interpretationTitle {
+  font-weight: bold;
+  font-size: 25px;
+  margin: 20px 0px;
+}
