--- a/app/(calculators)/styles.module.css
+++ b/app/(calculators)/styles.module.css
@@ -5,5 +5,6 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
-  background-color: #ff6faa;
+  background-color: var(--header-background);
+  transition: background-color 0.3s ease;
 }
