--- a/components/LoshuGrid/styles.module.css
+++ b/components/LoshuGrid/styles.module.css
@@ -3,6 +3,9 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
   width: 100%;
+  background-color: white;
+  padding: 10px;
+  border-radius: 10px;
 }
 
 .gridCell {
