--- a/components/NameField/styles.module.css
+++ b/components/NameField/styles.module.css
@@ -3,6 +3,7 @@
   padding: 0.5rem;
   letter-spacing: 1px;
   border: 1px solid gray;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   margin-top: 10px;
+  color: var(--text-input);
 }
