--- a/components/LoshuGrid/styles.module.css
+++ b/components/LoshuGrid/styles.module.css
@@ -3,14 +3,14 @@
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 10px;
   width: 100%;
-  background-color: white;
+  /* background-color: white;
   padding: 10px;
-  border-radius: 10px;
+  border-radius: 10px; */
 }
 
 .gridCell {
   position: relative;
-  background: radial-gradient(transparent, #8000002b);
+  background: var(--loshu-grid-cell-background);
   border: 1px solid #ccc;
 }
 
@@ -22,7 +22,7 @@
 }
 
 .gridCellWithCount {
-  background: radial-gradient(transparent, #90ee904f);
+  background: var(--loshu-grid-cell-with-count-background);
 }
 
 .cellContent {
