--- a/components/SystemField/styles.module.css
+++ b/components/SystemField/styles.module.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: row;
   border: 1px solid green;
-  border-radius: .5rem;
+  border-radius: 0.5rem;
   overflow: hidden;
   margin-top: 10px;
   background-color: white;
