--- a/components/layouts/CalculatorWrapper/styles.module.css
+++ b/components/layouts/CalculatorWrapper/styles.module.css
@@ -18,8 +18,11 @@
   justify-content: space-evenly;
   align-items: center;
   text-align: center;
-  color: var(--text-primary);
-  transition: transform 0.3s ease, background-color 0.3s ease, color 0.3s ease;
+  color: var(--text-one);
+  transition:
+    transform 0.3s ease,
+    background-color 0.3s ease,
+    color 0.3s ease;
   max-width: 220px;
   max-height: 220px;
   font-weight: 400;
@@ -61,16 +64,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  color: var(--text-primary);
+  color: var(--text-three);
   font-size: max(2vw, 1.8em);
   text-align: center;
-  transition: background 0.3s ease, color 0.3s ease;
+  transition:
+    background 0.3s ease,
+    color 0.3s ease;
 }
 
 .calculatorTemplateMiddleDiv {
   flex: 1;
   overflow: auto;
   background-color: var(--background);
-  color: var(--text-primary);
-  transition: background-color 0.3s ease, color 0.3s ease;
+  color: var(--text-one);
+  transition:
+    background-color 0.3s ease,
+    color 0.3s ease;
 }
