--- a/components/templates/NameDateCalcTemplate/styles.module.css
+++ b/components/templates/NameDateCalcTemplate/styles.module.css
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   margin: 0 10vw;
-  color: var(--text-primary);
+  color: var(--text-one);
   transition: color 0.3s ease;
 }
 
